added MFC 3d multiplexing support

--- a/JSVM/H264Extension/src/test/H264AVCEncoderLibTest/H264AVCEncoderLibTestStatic_vc10.vcxproj
+++ b/JSVM/H264Extension/src/test/H264AVCEncoderLibTest/H264AVCEncoderLibTestStatic_vc10.vcxproj
@@ -205,6 +205,8 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>Default</CompileAs>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -321,11 +323,14 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="img_process_mux_sbs.cpp" />
+    <ClCompile Include="img_process_mux_tab.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EncoderCodingParameter.h" />
     <ClInclude Include="H264AVCEncoderLibTest.h" />
     <ClInclude Include="H264AVCEncoderTest.h" />
+    <ClInclude Include="img_process_mux.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\data\encoder.cfg" />
