--- a/JSVM/H264Extension/src/lib/H264AVCEncoderLib/H264AVCEncoderLibStatic_vc10.vcxproj
+++ b/JSVM/H264Extension/src/lib/H264AVCEncoderLib/H264AVCEncoderLibStatic_vc10.vcxproj
@@ -110,6 +110,8 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>Default</CompileAs>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
