--- a/JSVM/H264Extension/src/test/H264AVCEncoderLibTest/H264AVCEncoderLibTestStatic_vc9.vcproj
+++ b/JSVM/H264Extension/src/test/H264AVCEncoderLibTest/H264AVCEncoderLibTestStatic_vc9.vcproj
@@ -543,6 +543,14 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\img_process_mux_sbs.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\img_process_mux_tab.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -558,6 +566,10 @@
 			</File>
 			<File
 				RelativePath="H264AVCEncoderTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\img_process_mux.h"
 				>
 			</File>
 		</Filter>
