minor cfg file fix

--- a/JSVM/H264Extension/data/Dolby_3DMux/3DMux_main.cfg
+++ b/JSVM/H264Extension/data/Dolby_3DMux/3DMux_main.cfg
@@ -49,8 +49,8 @@ InterLayerLoopFilterBetaOffset   0
 
 #============================== LAYER DEFINITION ===============================
 NumLayers   2
-LayerCfg                ./SVC_ref4_I2_H4_qp20_layer0.cfg
-LayerCfg                ./SVC_ref4_I2_H4_qp20_layer1.cfg
+LayerCfg                3DMux_layer0.cfg
+LayerCfg                3DMux_layer1.cfg
 
 #============================== WEIGHTED PREDICTION ============================
 WeightedPrediction   0
